[package]
name = "vk_playground"
version = "0.1.0"
authors = ["Gareth <gareth.w.owen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0"
ash = "0.29.0"
num = "0.2"
cgmath = "0.17.0"
image = "0.22"
memoffset = "0.5.1"
tobj = "0.1.10"

[dependencies.bitflags]
version = ">= 1.0.4"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"
objc  = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }

[[bin]]
name = "basic_window"
path = "src/random_programs/basic_window.rs"
[[bin]]
name = "triangle"
path = "src/random_programs/triangle.rs"
